fix: mejorar gestión de concurrencia